@@ -9,4 +9,5 @@ package edu.colorado.phet.movingman.ladybug
 object LadybugDefaults {
   var remoteIsIndicator = true
   var vaSticky = true
+  var timelineLengthSeconds=30
 }
