@@ -11,6 +11,7 @@
 > Disabled motions during playback
 > (add developer control for investigation) Should be able to set a value to the Remote Control, and have it remain even after releasing mouse button.
 > (add dev control) Remote Control should act as an indicator as well as controller
+> Added dev control for timeline length
 
 # 1.20.17 (27410) 01-17-2009
 # 1.20.16 (27408) 01-17-2009
